Bug 645913 - Links in mobile legal page are no longer covered by the active state border

--- a/media/css/mobile.css
+++ b/media/css/mobile.css
@@ -1021,6 +1021,7 @@ body#user-share {
     font-weight:bold;
     color:#ffd40d;
     line-height:48px;
+    padding-left:8px;
 }
 
 .legal-links a.last {
